@@ -31,6 +31,7 @@ SVN trunk (1.1.x):
    * The Dark Hordes
      * Underground Pool no longer has units off map and in walls
  * user interface
+     * theme chooser window added to preference graphics dialog.
      * fix untranslated unit create dialog (#4424)
      * changed recall to show recall list even when gold < 20
      * added advancement and AMLA indicator icons, tooltips to dfool theme
